// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be rendered correctly 1`] = `
.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-0:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::placeholder {
  color: #B9B9BD;
}

.emotion-0:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-0:not(:disabled):hover {
  border-color: #818489;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-0:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<div
  data-name="test"
>
  <div
    class="emotion-1"
  >
    <input
      class="emotion-0"
      maxlength="2"
      name="test"
      placeholder="Test"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`should not include field props on rendered HTML 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-2::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-2:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::placeholder {
  color: #B9B9BD;
}

.emotion-2:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-2:not(:disabled):hover {
  border-color: #818489;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-2:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0 {
  color: #D83A2E;
  margin-left: 0.25rem;
}

.emotion-1 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
}

<div
  data-name="test"
>
  <label
    class="emotion-1"
    for="test"
  >
    Test
    <span
      class="emotion-0"
      title="Campo obrigatório"
    >
      *
    </span>
  </label>
  <div
    class="emotion-3"
  >
    <input
      aria-label="Test"
      class="emotion-2"
      id="test"
      name="test"
      required=""
      type="text"
    />
  </div>
</div>
`;
